{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 915,
  "lineage": "868b477b-b146-56a9-d96a-1cdd16abbb9d",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958373514716:security-group/sg-0c0b36ab82e293b78",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0c0b36ab82e293b78",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d50398ab2c487153"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ha-eks-cluster-2025120819185026660000000f",
            "name_prefix": "ha-eks-cluster-",
            "owner_id": "958373514716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ha-eks-cluster",
              "Project": "home_assignment"
            },
            "tags_all": {
              "Name": "ha-eks-cluster",
              "Project": "home_assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-018ae7178912b0bda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958373514716:security-group/sg-0d50398ab2c487153",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d50398ab2c487153",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c0b36ab82e293b78"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c0b36ab82e293b78"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c0b36ab82e293b78"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c0b36ab82e293b78"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c0b36ab82e293b78"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c0b36ab82e293b78"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "ha-eks-node-2025120819185013160000000e",
            "name_prefix": "ha-eks-node-",
            "owner_id": "958373514716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ha-eks-node",
              "Project": "home_assignment",
              "kubernetes.io/cluster/ha-eks": "owned"
            },
            "tags_all": {
              "Name": "ha-eks-node",
              "Project": "home_assignment",
              "kubernetes.io/cluster/ha-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-018ae7178912b0bda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3089464741",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c0b36ab82e293b78",
            "security_group_rule_id": "sgr-0516ada13cc687208",
            "self": false,
            "source_security_group_id": "sg-0d50398ab2c487153",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3727424321",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d50398ab2c487153",
            "security_group_rule_id": "sgr-0c0fa788770740b2e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1561130355",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d50398ab2c487153",
            "security_group_rule_id": "sgr-04490be5e7cc522ee",
            "self": false,
            "source_security_group_id": "sg-0c0b36ab82e293b78",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2083100449",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d50398ab2c487153",
            "security_group_rule_id": "sgr-04f51b724d7ca882e",
            "self": false,
            "source_security_group_id": "sg-0c0b36ab82e293b78",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3043750071",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d50398ab2c487153",
            "security_group_rule_id": "sgr-0a23fb193b43386e3",
            "self": false,
            "source_security_group_id": "sg-0c0b36ab82e293b78",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2788674710",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d50398ab2c487153",
            "security_group_rule_id": "sgr-06690a250b4def5ae",
            "self": false,
            "source_security_group_id": "sg-0c0b36ab82e293b78",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3264675677",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d50398ab2c487153",
            "security_group_rule_id": "sgr-03ed6f154d1389c54",
            "self": false,
            "source_security_group_id": "sg-0c0b36ab82e293b78",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3967704616",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d50398ab2c487153",
            "security_group_rule_id": "sgr-051c17742096e769e",
            "self": false,
            "source_security_group_id": "sg-0c0b36ab82e293b78",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1373277488",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d50398ab2c487153",
            "security_group_rule_id": "sgr-00c798ac53ee82606",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-148485880",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d50398ab2c487153",
            "security_group_rule_id": "sgr-08fd53cdefed753e0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2894468375",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0d50398ab2c487153",
            "security_group_rule_id": "sgr-0c54c040179f71e27",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958373514716:network-acl/acl-086775023dd9507d2",
            "default_network_acl_id": "acl-086775023dd9507d2",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-086775023dd9507d2",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "958373514716",
            "subnet_ids": [
              "subnet-01ead5b91db935423",
              "subnet-030a98308541aa06a",
              "subnet-09434fbcf36551412",
              "subnet-0a0dbfdd3ff71d843",
              "subnet-0bebdd20c73f2834b",
              "subnet-0d95ad74ca62a9be5"
            ],
            "tags": {
              "Name": "home_assignment-sandbox-vpc-default",
              "Project": "home_assignment"
            },
            "tags_all": {
              "Name": "home_assignment-sandbox-vpc-default",
              "Project": "home_assignment"
            },
            "vpc_id": "vpc-018ae7178912b0bda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958373514716:route-table/rtb-09231f7582da39c36",
            "default_route_table_id": "rtb-09231f7582da39c36",
            "id": "rtb-09231f7582da39c36",
            "owner_id": "958373514716",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "home_assignment-sandbox-vpc-default",
              "Project": "home_assignment"
            },
            "tags_all": {
              "Name": "home_assignment-sandbox-vpc-default",
              "Project": "home_assignment"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-018ae7178912b0bda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958373514716:security-group/sg-03d91734aaf9f3492",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-03d91734aaf9f3492",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "958373514716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "home_assignment-sandbox-vpc-default",
              "Project": "home_assignment"
            },
            "tags_all": {
              "Name": "home_assignment-sandbox-vpc-default",
              "Project": "home_assignment"
            },
            "vpc_id": "vpc-018ae7178912b0bda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0acded716b8b9b4b6",
            "arn": "arn:aws:ec2:us-east-1:958373514716:elastic-ip/eipalloc-0acded716b8b9b4b6",
            "association_id": "eipassoc-07370e95d0d5e1925",
            "domain": "vpc",
            "id": "eipalloc-0acded716b8b9b4b6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e2547f6ff0615b4d",
            "private_dns": "ip-10-0-101-69.ec2.internal",
            "private_ip": "10.0.101.69",
            "public_dns": "ec2-3-216-121-213.compute-1.amazonaws.com",
            "public_ip": "3.216.121.213",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "home_assignment-sandbox-vpc-us-east-1a",
              "Project": "home_assignment"
            },
            "tags_all": {
              "Name": "home_assignment-sandbox-vpc-us-east-1a",
              "Project": "home_assignment"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d32842f2e72fe146",
            "arn": "arn:aws:ec2:us-east-1:958373514716:elastic-ip/eipalloc-0d32842f2e72fe146",
            "association_id": "eipassoc-055d5d3b721e64945",
            "domain": "vpc",
            "id": "eipalloc-0d32842f2e72fe146",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07f8f619adcf4a27d",
            "private_dns": "ip-10-0-102-194.ec2.internal",
            "private_ip": "10.0.102.194",
            "public_dns": "ec2-54-80-29-63.compute-1.amazonaws.com",
            "public_ip": "54.80.29.63",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "home_assignment-sandbox-vpc-us-east-1b",
              "Project": "home_assignment"
            },
            "tags_all": {
              "Name": "home_assignment-sandbox-vpc-us-east-1b",
              "Project": "home_assignment"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb4279dee4458c7a",
            "arn": "arn:aws:ec2:us-east-1:958373514716:elastic-ip/eipalloc-0eb4279dee4458c7a",
            "association_id": "eipassoc-0b7152efa6dae2ae8",
            "domain": "vpc",
            "id": "eipalloc-0eb4279dee4458c7a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ead3e8fcb8a51503",
            "private_dns": "ip-10-0-103-87.ec2.internal",
            "private_ip": "10.0.103.87",
            "public_dns": "ec2-35-170-163-129.compute-1.amazonaws.com",
            "public_ip": "35.170.163.129",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "home_assignment-sandbox-vpc-us-east-1c",
              "Project": "home_assignment"
            },
            "tags_all": {
              "Name": "home_assignment-sandbox-vpc-us-east-1c",
              "Project": "home_assignment"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958373514716:internet-gateway/igw-0ca863a1e7df8a458",
            "id": "igw-0ca863a1e7df8a458",
            "owner_id": "958373514716",
            "tags": {
              "Name": "home_assignment-sandbox-vpc",
              "Project": "home_assignment"
            },
            "tags_all": {
              "Name": "home_assignment-sandbox-vpc",
              "Project": "home_assignment"
            },
            "vpc_id": "vpc-018ae7178912b0bda"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0acded716b8b9b4b6",
            "association_id": "eipassoc-07370e95d0d5e1925",
            "connectivity_type": "public",
            "id": "nat-00e5cddb49b80d1e1",
            "network_interface_id": "eni-0e2547f6ff0615b4d",
            "private_ip": "10.0.101.69",
            "public_ip": "3.216.121.213",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d95ad74ca62a9be5",
            "tags": {
              "Name": "home_assignment-sandbox-vpc-us-east-1a",
              "Project": "home_assignment"
            },
            "tags_all": {
              "Name": "home_assignment-sandbox-vpc-us-east-1a",
              "Project": "home_assignment"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d32842f2e72fe146",
            "association_id": "eipassoc-055d5d3b721e64945",
            "connectivity_type": "public",
            "id": "nat-0c50792779d68e0e3",
            "network_interface_id": "eni-07f8f619adcf4a27d",
            "private_ip": "10.0.102.194",
            "public_ip": "54.80.29.63",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-030a98308541aa06a",
            "tags": {
              "Name": "home_assignment-sandbox-vpc-us-east-1b",
              "Project": "home_assignment"
            },
            "tags_all": {
              "Name": "home_assignment-sandbox-vpc-us-east-1b",
              "Project": "home_assignment"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb4279dee4458c7a",
            "association_id": "eipassoc-0b7152efa6dae2ae8",
            "connectivity_type": "public",
            "id": "nat-07c65258841c2e489",
            "network_interface_id": "eni-0ead3e8fcb8a51503",
            "private_ip": "10.0.103.87",
            "public_ip": "35.170.163.129",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a0dbfdd3ff71d843",
            "tags": {
              "Name": "home_assignment-sandbox-vpc-us-east-1c",
              "Project": "home_assignment"
            },
            "tags_all": {
              "Name": "home_assignment-sandbox-vpc-us-east-1c",
              "Project": "home_assignment"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-038e85bbffbf013281080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00e5cddb49b80d1e1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-038e85bbffbf01328",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ac5f4321d3dc5fe51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c50792779d68e0e3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ac5f4321d3dc5fe5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00d60ed6330fe290b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07c65258841c2e489",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00d60ed6330fe290b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ca863a1e7df8a458",
            "id": "r-rtb-0d4a5f1b534f4a16c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d4a5f1b534f4a16c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958373514716:route-table/rtb-038e85bbffbf01328",
            "id": "rtb-038e85bbffbf01328",
            "owner_id": "958373514716",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00e5cddb49b80d1e1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "home_assignment-sandbox-vpc-private-us-east-1a",
              "Project": "home_assignment"
            },
            "tags_all": {
              "Name": "home_assignment-sandbox-vpc-private-us-east-1a",
              "Project": "home_assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-018ae7178912b0bda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958373514716:route-table/rtb-0ac5f4321d3dc5fe5",
            "id": "rtb-0ac5f4321d3dc5fe5",
            "owner_id": "958373514716",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c50792779d68e0e3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "home_assignment-sandbox-vpc-private-us-east-1b",
              "Project": "home_assignment"
            },
            "tags_all": {
              "Name": "home_assignment-sandbox-vpc-private-us-east-1b",
              "Project": "home_assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-018ae7178912b0bda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958373514716:route-table/rtb-00d60ed6330fe290b",
            "id": "rtb-00d60ed6330fe290b",
            "owner_id": "958373514716",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07c65258841c2e489",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "home_assignment-sandbox-vpc-private-us-east-1c",
              "Project": "home_assignment"
            },
            "tags_all": {
              "Name": "home_assignment-sandbox-vpc-private-us-east-1c",
              "Project": "home_assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-018ae7178912b0bda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958373514716:route-table/rtb-0d4a5f1b534f4a16c",
            "id": "rtb-0d4a5f1b534f4a16c",
            "owner_id": "958373514716",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ca863a1e7df8a458",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "home_assignment-sandbox-vpc-public",
              "Project": "home_assignment"
            },
            "tags_all": {
              "Name": "home_assignment-sandbox-vpc-public",
              "Project": "home_assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-018ae7178912b0bda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f14ee7c03441b325",
            "route_table_id": "rtb-038e85bbffbf01328",
            "subnet_id": "subnet-09434fbcf36551412"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09651621b8274c446",
            "route_table_id": "rtb-0ac5f4321d3dc5fe5",
            "subnet_id": "subnet-0bebdd20c73f2834b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07dd711c91cca1466",
            "route_table_id": "rtb-00d60ed6330fe290b",
            "subnet_id": "subnet-01ead5b91db935423"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aec4e1138c4e284b",
            "route_table_id": "rtb-0d4a5f1b534f4a16c",
            "subnet_id": "subnet-0d95ad74ca62a9be5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0223e49747f5979c3",
            "route_table_id": "rtb-0d4a5f1b534f4a16c",
            "subnet_id": "subnet-030a98308541aa06a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba68e8a98fde373a",
            "route_table_id": "rtb-0d4a5f1b534f4a16c",
            "subnet_id": "subnet-0a0dbfdd3ff71d843"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958373514716:subnet/subnet-09434fbcf36551412",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09434fbcf36551412",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958373514716",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "home_assignment-sandbox-vpc-private-us-east-1a",
              "Project": "home_assignment",
              "kubernetes.io/cluster/ha-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "home_assignment-sandbox-vpc-private-us-east-1a",
              "Project": "home_assignment",
              "kubernetes.io/cluster/ha-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-018ae7178912b0bda"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958373514716:subnet/subnet-0bebdd20c73f2834b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bebdd20c73f2834b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958373514716",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "home_assignment-sandbox-vpc-private-us-east-1b",
              "Project": "home_assignment",
              "kubernetes.io/cluster/ha-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "home_assignment-sandbox-vpc-private-us-east-1b",
              "Project": "home_assignment",
              "kubernetes.io/cluster/ha-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-018ae7178912b0bda"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958373514716:subnet/subnet-01ead5b91db935423",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ead5b91db935423",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958373514716",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "home_assignment-sandbox-vpc-private-us-east-1c",
              "Project": "home_assignment",
              "kubernetes.io/cluster/ha-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "home_assignment-sandbox-vpc-private-us-east-1c",
              "Project": "home_assignment",
              "kubernetes.io/cluster/ha-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-018ae7178912b0bda"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958373514716:subnet/subnet-0d95ad74ca62a9be5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d95ad74ca62a9be5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958373514716",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "home_assignment-sandbox-vpc-public-us-east-1a",
              "Project": "home_assignment",
              "kubernetes.io/cluster/ha-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "home_assignment-sandbox-vpc-public-us-east-1a",
              "Project": "home_assignment",
              "kubernetes.io/cluster/ha-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-018ae7178912b0bda"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958373514716:subnet/subnet-030a98308541aa06a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030a98308541aa06a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958373514716",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "home_assignment-sandbox-vpc-public-us-east-1b",
              "Project": "home_assignment",
              "kubernetes.io/cluster/ha-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "home_assignment-sandbox-vpc-public-us-east-1b",
              "Project": "home_assignment",
              "kubernetes.io/cluster/ha-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-018ae7178912b0bda"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958373514716:subnet/subnet-0a0dbfdd3ff71d843",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0dbfdd3ff71d843",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958373514716",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "home_assignment-sandbox-vpc-public-us-east-1c",
              "Project": "home_assignment",
              "kubernetes.io/cluster/ha-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "home_assignment-sandbox-vpc-public-us-east-1c",
              "Project": "home_assignment",
              "kubernetes.io/cluster/ha-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-018ae7178912b0bda"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958373514716:vpc/vpc-018ae7178912b0bda",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-086775023dd9507d2",
            "default_route_table_id": "rtb-09231f7582da39c36",
            "default_security_group_id": "sg-03d91734aaf9f3492",
            "dhcp_options_id": "dopt-0e57bfc3247e733ac",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-018ae7178912b0bda",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09231f7582da39c36",
            "owner_id": "958373514716",
            "tags": {
              "Name": "home_assignment-sandbox-vpc",
              "Project": "home_assignment"
            },
            "tags_all": {
              "Name": "home_assignment-sandbox-vpc",
              "Project": "home_assignment"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}